panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__preprocessor__test_error_stringise_not_a_parameter.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/preprocessor/test_error_stringise_not_a_parameter.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: stringise operand `42` is not a macro parameter
   ╭─[panko/tests/cases/preprocessor/test_error_stringise_not_a_parameter.c:3:15]
   │
 3 │ #define F(x) #42
   │               ─┬  
   │                ╰── this is not a macro parameter
───╯
