panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__preprocessor__test_error_subscript_in_if_condition.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/preprocessor/test_error_subscript_in_if_condition.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: subscript expressions are not allowed in preprocessor expressions
   ╭─[panko/tests/cases/preprocessor/test_error_subscript_in_if_condition.c:1:5]
   │
 1 │ #if 0[1] + 42
   │     ────  
───╯

Error: subscript expressions are not allowed in preprocessor expressions
   ╭─[panko/tests/cases/preprocessor/test_error_subscript_in_if_condition.c:4:10]
   │
 4 │ #if 2 + (2[3])
   │          ────  
───╯

Error: subscript expressions are not allowed in preprocessor expressions
   ╭─[panko/tests/cases/preprocessor/test_error_subscript_in_if_condition.c:7:14]
   │
 7 │ #if false && 4[5]
   │              ────  
───╯
